[gd_scene load_steps=16 format=3 uid="uid://bnpwx4xplrcu"]

[ext_resource type="Texture2D" uid="uid://bc78rorek835v" path="res://assets/Firebolt SpriteSheet.png" id="1_12j13"]
[ext_resource type="Script" path="res://fireball.gd" id="1_sd2pg"]
[ext_resource type="Texture2D" uid="uid://dr7ppvc6ge54f" path="res://assets/neutral_light.webp" id="3_lw4ui"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ur77"]
atlas = ExtResource("1_12j13")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ejdg"]
atlas = ExtResource("1_12j13")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_260ki"]
atlas = ExtResource("1_12j13")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iopej"]
atlas = ExtResource("1_12j13")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgvkx"]
atlas = ExtResource("1_12j13")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1caun"]
atlas = ExtResource("1_12j13")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl300"]
atlas = ExtResource("1_12j13")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nboxp"]
atlas = ExtResource("1_12j13")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgql8"]
atlas = ExtResource("1_12j13")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o53e5"]
atlas = ExtResource("1_12j13")
region = Rect2(480, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_mc8a1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ur77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ejdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_260ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iopej")
}],
"loop": true,
"name": &"fly",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgvkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1caun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl300")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nboxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgql8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o53e5")
}],
"loop": false,
"name": &"hit",
"speed": 14.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fu0mw"]
radius = 8.06226

[node name="Fireball" type="Node2D"]
z_index = 5
script = ExtResource("1_sd2pg")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-7, -6)
sprite_frames = SubResource("SpriteFrames_mc8a1")
animation = &"fly"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.362
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 0)
shape = SubResource("CircleShape2D_fu0mw")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.258824, 0, 1)
shadow_enabled = true
shadow_filter_smooth = 23.0
texture = ExtResource("3_lw4ui")

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
